[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/icons/menu_FILL0_wght400_GRAD0_opsz48 (1).png" type="Texture" id=1]
[ext_resource path="res://navigation/in-game-menu/InGameMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.545098, 0.0509804, 0.0509804, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.545098, 0.0509804, 0.0509804, 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]

[node name="InGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.028125
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 54.0
mouse_filter = 2
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 940.0
margin_right = 1000.0
margin_bottom = 54.0
icon = ExtResource( 1 )
flat = true
align = 2
icon_align = 2

[node name="ButtonMenu" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="ButtonMenu/VBoxContainer"]
margin_top = 646.0
margin_right = 800.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 1 )
text = "EXIT"

[node name="HSeparator" type="HSeparator" parent="ButtonMenu/VBoxContainer"]
margin_top = 731.0
margin_right = 800.0
margin_bottom = 781.0
rect_min_size = Vector2( 0, 50 )

[node name="Block" type="Button" parent="ButtonMenu/VBoxContainer"]
margin_top = 785.0
margin_right = 800.0
margin_bottom = 860.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "BLOCK"

[node name="HSeparator2" type="HSeparator" parent="ButtonMenu/VBoxContainer"]
margin_top = 864.0
margin_right = 800.0
margin_bottom = 914.0
rect_min_size = Vector2( 0, 50 )

[node name="Report" type="Button" parent="ButtonMenu/VBoxContainer"]
margin_top = 918.0
margin_right = 800.0
margin_bottom = 993.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "REPORT"

[node name="BlockMenu" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="BlockMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BlockUser" type="Button" parent="BlockMenu/VBoxContainer"]
margin_top = 716.0
margin_right = 800.0
margin_bottom = 791.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "BLOCK-USER"

[node name="HSeparator" type="HSeparator" parent="BlockMenu/VBoxContainer"]
margin_top = 795.0
margin_right = 800.0
margin_bottom = 845.0
rect_min_size = Vector2( 0, 50 )

[node name="BlockThisGame" type="Button" parent="BlockMenu/VBoxContainer"]
margin_top = 849.0
margin_right = 800.0
margin_bottom = 924.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "BLOCK-GAME"

[node name="ReportMenu" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ReportMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ReportMenu/VBoxContainer"]
margin_top = 378.0
margin_right = 800.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 4 )
text = "REPORT-REASON"
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ReportMenu/VBoxContainer"]
margin_top = 574.0
margin_right = 800.0
margin_bottom = 624.0
rect_min_size = Vector2( 0, 50 )

[node name="TextEdit" type="TextEdit" parent="ReportMenu/VBoxContainer"]
margin_top = 628.0
margin_right = 800.0
margin_bottom = 1128.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/font = SubResource( 5 )

[node name="HSeparator2" type="HSeparator" parent="ReportMenu/VBoxContainer"]
margin_top = 1132.0
margin_right = 800.0
margin_bottom = 1182.0
rect_min_size = Vector2( 0, 50 )

[node name="ReportSend" type="Button" parent="ReportMenu/VBoxContainer"]
margin_top = 1186.0
margin_right = 800.0
margin_bottom = 1261.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "SEND-REPORT"

[node name="ReportSuccess" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ReportSuccess"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ReportSuccess/VBoxContainer"]
margin_top = 756.0
margin_right = 800.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 4 )
text = "REPORT-SUCCESS"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ReportSuccess/VBoxContainer"]
margin_top = 1132.0
margin_right = 800.0
margin_bottom = 1182.0
rect_min_size = Vector2( 0, 50 )

[node name="Ok" type="Button" parent="ReportSuccess/VBoxContainer"]
margin_top = 1186.0
margin_right = 800.0
margin_bottom = 1261.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 6 )
text = "Ok"

[node name="ReportFail" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ReportFail"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="ReportFail/VBoxContainer"]
margin_top = 756.0
margin_right = 800.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 4 )
text = "REPORT-ERROR"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="ReportFail/VBoxContainer"]
margin_top = 1132.0
margin_right = 800.0
margin_bottom = 1182.0
rect_min_size = Vector2( 0, 50 )

[node name="Ok" type="Button" parent="ReportFail/VBoxContainer"]
margin_top = 1186.0
margin_right = 800.0
margin_bottom = 1261.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 6 )
text = "Ok"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="ButtonMenu" to="." method="_on_ButtonMenu_gui_input"]
[connection signal="pressed" from="ButtonMenu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ButtonMenu/VBoxContainer/Block" to="." method="_on_Block_pressed"]
[connection signal="pressed" from="ButtonMenu/VBoxContainer/Report" to="." method="_on_Report_pressed"]
[connection signal="gui_input" from="BlockMenu" to="." method="_on_ButtonMenu_gui_input"]
[connection signal="pressed" from="BlockMenu/VBoxContainer/BlockUser" to="." method="_on_BlockUser_pressed"]
[connection signal="pressed" from="BlockMenu/VBoxContainer/BlockThisGame" to="." method="_on_BlockThisGame_pressed"]
[connection signal="gui_input" from="ReportMenu" to="." method="_on_ButtonMenu_gui_input"]
[connection signal="pressed" from="ReportMenu/VBoxContainer/ReportSend" to="." method="_on_ReportSend_pressed"]
[connection signal="gui_input" from="ReportSuccess" to="." method="_on_ButtonMenu_gui_input"]
[connection signal="pressed" from="ReportSuccess/VBoxContainer/Ok" to="." method="_on_Ok_pressed"]
[connection signal="gui_input" from="ReportFail" to="." method="_on_ButtonMenu_gui_input"]
[connection signal="pressed" from="ReportFail/VBoxContainer/Ok" to="." method="_on_Ok_pressed"]
